clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_array_struct/borrow_array_struct_2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct SI { int a; int b; };
struct SJ { struct SI *arr[2]; };

void foo1() {
  struct SI si1 = {1, 2};
  struct SI si2 = {3, 4};
  struct SJ sj = {{&si1, &si2}};
  struct SJ *_Borrow a = &_Mut sj;
  int *_Borrow bb = &_Mut a->arr[1]->b; // expected-note {{first mut borrow occurs here}}
  int *_Borrow ba = &_Mut a->arr[0]->a;
  int *_Borrow bb2 = &_Mut a->arr[0]->b; // expected-error {{cannot borrow `(*(*a).arr[]).b` as mutable more than once at a time}}
  (void)ba;
  (void)bb;
  (void)bb2;
}

int main() {
  foo1();
  return 0;
}
